fix: navi에 z-index추가

--- a/src/css/components/navigation.module.css
+++ b/src/css/components/navigation.module.css
@@ -12,6 +12,7 @@
   align-items: center;
   border-top: 1px solid #e6e7eb;
   background-color: #ffffff;
+  z-index: 100;
 }
 .item {
   display: flex;
